err/cloudantdb.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cloudant'...
Listing './lib/python3.5/site-packages/cloudant-2.7.0.egg-info'...
Listing './lib/python3.5/site-packages/cloudantdb'...
Listing './lib/python3.5/site-packages/cloudantdb/document'...
Listing './lib/python3.5/site-packages/cloudantdb/ext'...
Listing './lib/python3.5/site-packages/cloudantdb/ext/django'...
Listing './lib/python3.5/site-packages/cloudantdb/ext/django/management'...
Listing './lib/python3.5/site-packages/cloudantdb/ext/django/management/commands'...
Compiling './lib/python3.5/site-packages/cloudantdb/ext/django/management/commands/sync_cloudant.py'...
***   File "./lib/python3.5/site-packages/cloudantdb/ext/django/management/commands/sync_cloudant.py", line 55
    print "Syncing Indexes for {0}".format(class_name)
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cloudantdb/ext/django/testrunner.py'...
***   File "./lib/python3.5/site-packages/cloudantdb/ext/django/testrunner.py", line 20
    print u"Creating test database for label {0}".format(db_label)
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudantdb/loading'...
Compiling './lib/python3.5/site-packages/cloudantdb/properties.py'...
***   File "./lib/python3.5/site-packages/cloudantdb/properties.py", line 171
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudantdb-0.2.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/lucene_querybuilder-0.2.egg-info'...
Listing './lib/python3.5/site-packages/lucenequerybuilder'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
